--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -67,6 +67,10 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e184 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     // registration id field
     .ft--e19--root {
       grid-column: span 2;
@@ -98,15 +102,27 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e190 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     div.ft--e39--root,
     div.ft--e40--root {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
   // insurance information
   #e193 {
     grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
 
     div.ft--e46--root,
     div.ft--e57--root,
@@ -115,6 +131,10 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e233--root,
     div.ft--e243--root {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
@@ -122,8 +142,16 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e198 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     div.ft--e70--root {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
@@ -131,40 +159,72 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e203 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     div.ft--e85--root,
     div.ft--e234--root {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
   // emergency contact
   #e201 {
     grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   // communicating with others
   #e211 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     div.ft--e80--root,
     div.ft--e175--root,
     div.ft--e244--root {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
   // primary care physician
   #e209 {
     grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   // agreement of financial responsibility
   #e207 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     div.ft--pos--e145,
     div.ft--pos--e146 {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
@@ -172,9 +232,17 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e238 {
     grid-template-columns: 1fr 1fr;
 
+    @media (max-width: 560px) {
+      grid-template-columns: 1fr;
+    }
+
     div.ft--e145--root,
     div.ft--e146--root {
       grid-column: span 2;
+
+      @media (max-width: 560px) {
+        grid-column: auto;
+      }
     }
   }
 
@@ -196,6 +264,10 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   div[data-type="Auto Fit Container"].ft--e239--root,
   div[data-type="Auto Fit Container"].ft--e241--root {
     grid-column: span 2;
+
+    @media (max-width: 560px) {
+      grid-column: auto;
+    }
   }
 
   #e234,
