--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -61,6 +61,10 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e205,
   #e213 {
     display: flex;
+
+    @media (max-width: 560px) {
+      display: block;
+    }
   }
 
   // step 1 fields container
