--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -62,7 +62,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e213 {
     display: flex;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       display: block;
     }
   }
@@ -71,7 +71,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e184 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -79,7 +79,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     .ft--e19--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -95,6 +95,10 @@ div[data-page="63e27e06eed0df7e7d466584"] {
       .ft--theme--Strip--root
     ):not(.ft--theme--Button--secondary) {
     margin-left: auto !important;
+
+    @media (max-width: 450px) {
+      margin: 0 !important;
+    }
   }
 
   // button container
@@ -110,7 +114,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e190 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -118,7 +122,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e40--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -128,7 +132,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e193 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -140,7 +144,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e243--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -150,14 +154,14 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e198 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
     div.ft--e70--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -167,7 +171,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e203 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -175,7 +179,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e234--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -185,7 +189,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e201 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
   }
@@ -194,7 +198,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e211 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -203,7 +207,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e244--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -213,7 +217,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e209 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
   }
@@ -222,7 +226,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e207 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -230,7 +234,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--pos--e146 {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -240,7 +244,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   #e238 {
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
@@ -248,7 +252,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
     div.ft--e146--root {
       grid-column: span 2;
 
-      @media (max-width: 500px) {
+      @media (max-width: 450px) {
         grid-column: auto;
       }
     }
@@ -273,7 +277,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   div[data-type="Auto Fit Container"].ft--e241--root {
     grid-column: span 2;
 
-    @media (max-width: 500px) {
+    @media (max-width: 450px) {
       grid-column: auto;
     }
   }
