--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -98,6 +98,7 @@ div[data-page="63e27e06eed0df7e7d466584"] {
 
     @media (max-width: 450px) {
       margin: 0 !important;
+      width: 100% !important;
     }
   }
 
