--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -100,7 +100,8 @@ div[data-page="63e27e06eed0df7e7d466584"] {
   @media (max-width: 450px) {
     div[data-type="Button"].ft--theme--Button--primary,
     div[data-type="Button"].ft--theme--Button--primary:active,
-    div[data-type="Button"].ft--theme--Button--primary:active,
+    div[data-type="Button"].ft--theme--Button--secondary,
+    div[data-type="Button"].ft--theme--Button--secondary:active,
     div[data-type="Button"].ftb-resizers.size--fix:active:not(
         .ft--theme--Section--root
       ):not(.ft--theme--Strip--root),
