--- a/src/styles/_titan-resets.scss
+++ b/src/styles/_titan-resets.scss
@@ -1,3 +1,8 @@
+body {
+  min-width: auto !important;
+  max-width: 100% !important;
+}
+
 // fix weird overflow
 .ft--control--root {
   padding-right: 1px !important;
