--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,3 +15,4 @@
 @import "./forms/submit-insurance";
 @import "./forms/patient-registration";
 @import "./forms/blank-letter";
+@import "./forms/submit-documents";
