--- a/src/styles/forms/_submit-documents.scss
+++ b/src/styles/forms/_submit-documents.scss
@@ -6,7 +6,7 @@ div[data-page="63f8d1959230963378529a45"] {
     column-gap: 10px;
 
     @media (max-width: 700px) {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
     }
   }
 }
