--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,3 +16,4 @@
 @import "./forms/patient-registration";
 @import "./forms/blank-letter";
 @import "./forms/submit-documents";
+@import "./forms/release-of-information";
