--- a/src/styles/forms/_release-of-information.scss
+++ b/src/styles/forms/_release-of-information.scss
@@ -1,25 +1,18 @@
 div[data-page="63ebad339df0fc57fce02ca6"] {
   div[data-type="Subhead"] .ft--theme--Typography--subhead {
-    margin-top: 0 !important;
+    margin: 0 !important;
   }
 
-  #e53 .ft--theme--Form--col {
+  #e52 {
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+  }
+
+  #e53 .ft--e54--col,
+  #e65 .ft--e65--col {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 30px;
-    column-gap: 10px;
-    margin-bottom: 50px !important;
-
-    div[data-type="Paragraph"],
-    div[data-type="Subhead"] {
-      grid-column: span 2;
-    }
-  }
-
-  div[data-type="Form"].ft--e65--root,
-  div[data-type="Form"].ft--e77--root,
-  div[data-type="Form"].ft--e89--root,
-  div[data-type="Form"].ft--e100--root {
-    margin-bottom: 50px !important;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 100px;
   }
 }
