--- a/src/styles/forms/_release-of-information.scss
+++ b/src/styles/forms/_release-of-information.scss
@@ -4,15 +4,15 @@ div[data-page="63ebad339df0fc57fce02ca6"] {
   }
 
   #e52 {
-    display: flex;
-    flex-direction: column;
-    row-gap: 50px;
+    display: flex !important;
+    flex-direction: column !important;
+    row-gap: 50px !important;
   }
 
   #e53 .ft--e54--col,
   #e65 .ft--e65--col {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 100px;
+    display: grid !important;
+    grid-template-columns: 1fr 2fr !important;
+    column-gap: 100px !important;
   }
 }
