--- a/src/styles/forms/_release-of-information.scss
+++ b/src/styles/forms/_release-of-information.scss
@@ -9,9 +9,11 @@ div[data-page="63ebad339df0fc57fce02ca6"] {
     row-gap: 50px !important;
   }
 
-  #e53 .ft--e53--col,
-  #e65 .ft--e65--col,
-  #e77 .ft--e77--col {
+  #e197,
+  #e198,
+  #e201,
+  #e204,
+  #e207 {
     display: grid !important;
     grid-template-columns: 1fr 2fr !important;
     column-gap: 100px !important;
