--- a/src/styles/forms/_release-of-information.scss
+++ b/src/styles/forms/_release-of-information.scss
@@ -1,4 +1,4 @@
-div[data-page="63ebad339df0fc57fce02ca6"] {
+#roi-form {
   div.ft--theme--Typography--subhead:not([data-type="Subhead"]) {
     font-size: var(--fontSize__h5) !important;
     margin: 0 0 10px !important;
@@ -99,5 +99,6 @@ div[data-page="63ebad339df0fc57fce02ca6"] {
     column-gap: 10px !important;
     row-gap: 30px !important;
     margin-bottom: 50px !important;
+    align-items: end;
   }
 }
