--- a/src/styles/forms/_release-of-information.scss
+++ b/src/styles/forms/_release-of-information.scss
@@ -8,6 +8,10 @@
     display: flex !important;
     flex-direction: column !important;
     row-gap: 70px !important;
+
+    @media (max-width: 700px) {
+      row-gap: 50px !important;
+    }
   }
 
   #e197,
@@ -18,6 +22,10 @@
     display: grid !important;
     grid-template-columns: 1fr 2fr !important;
     column-gap: 100px !important;
+
+    @media (max-width: 700px) {
+      grid-template-columns: 1fr !important;
+    }
   }
 
   #e193,
@@ -34,6 +42,11 @@
     display: grid !important;
     grid-template-columns: 1fr 1fr !important;
     column-gap: 10px !important;
+
+    @media (max-width: 500px) {
+      grid-template-columns: 1fr !important;
+      row-gap: 30px;
+    }
   }
 
   .ft--theme--FormField--checkbox {
@@ -51,6 +64,10 @@
     grid-template-columns: 1fr 1fr !important;
     column-gap: 10px !important;
     row-gap: 30px !important;
+
+    @media (max-width: 500px) {
+      grid-template-columns: 1fr !important;
+    }
 
     div[data-type="Auto Fit Container"] {
       grid-column: span 2;
@@ -100,15 +117,33 @@
     row-gap: 30px !important;
     margin-bottom: 50px !important;
     align-items: end;
+
+    @media (max-width: 500px) {
+      grid-template-columns: 1fr !important;
+    }
   }
 
+  // buttons
   #e214,
   #e216 {
     display: flex;
     justify-content: space-between;
 
+    @media (max-width: 700px) {
+      row-gap: 5px;
+      flex-direction: column;
+
+      div[data-type="Button"] {
+        width: 100% !important;
+      }
+    }
+
     > div[data-type="Button"]:last-of-type {
       margin-left: auto !important;
+
+      @media (max-width: 700px) {
+        margin-left: 0 !important;
+      }
     }
   }
 }
