Reduce grid span

--- a/src/styles/forms/_release-of-information.scss
+++ b/src/styles/forms/_release-of-information.scss
@@ -71,6 +71,10 @@
 
     div[data-type="Auto Fit Container"] {
       grid-column: span 2;
+
+      @media (max-width: 500px) {
+        grid-column: span 1;
+      }
     }
   }
 
