Add identification form styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,8 +12,9 @@
 @import "./address";
 
 // forms
-@import "./forms/submit-insurance";
 @import "./forms/patient-registration";
+@import "./forms/submit-insurance";
 @import "./forms/blank-letter";
 @import "./forms/submit-documents";
 @import "./forms/release-of-information";
+@import "./forms/identity-verification";
