--- a/src/styles/forms/_identity-verification.scss
+++ b/src/styles/forms/_identity-verification.scss
@@ -4,11 +4,23 @@
     grid-template-columns: 1fr 1fr;
     gap: 10px;
     margin-bottom: 40px;
+
+    @media (max-width: 700px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   // button
   #e11 {
     display: flex;
     justify-content: flex-end;
+
+    @media (max-width: 700px) {
+      justify-content: initial;
+
+      div[data-type="Button"] {
+        width: 100% !important;
+      }
+    }
   }
 }
