--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,3 +18,5 @@
 @import "./forms/submit-documents";
 @import "./forms/release-of-information";
 @import "./forms/identity-verification";
+@import "./forms/verify-primary-insurance";
+@import "./forms/verify-secondary-insurance";
