Add appointment form styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@
 @import "./address";
 
 // forms
+@import "./forms/appointment";
 @import "./forms/patient-registration";
 @import "./forms/submit-insurance";
 @import "./forms/blank-letter";
