--- a/src/styles/forms/_appointment.scss
+++ b/src/styles/forms/_appointment.scss
@@ -9,4 +9,16 @@
       row-gap: 5px !important;
     }
   }
+
+  #e54,
+  #e57,
+  #e59 {
+    margin-top: 30px !important;
+    display: flex;
+    justify-content: space-between;
+
+    > div[data-type="Button"] {
+      justify-self: flex-end;
+    }
+  }
 }
