--- a/src/styles/forms/_appointment.scss
+++ b/src/styles/forms/_appointment.scss
@@ -1,18 +1,37 @@
 #appointment-form {
   // labels
-  label.ft--label {
-    font-size: var(--fontSize__base) !important;
+  label {
+    &.ft--label {
+      font-size: var(--fontSize__base) !important;
+    }
+    &.ft--shrink {
+      margin-bottom: 7px !important;
+    }
   }
 
   #e54,
   #e57,
   #e59 {
-    margin-top: 30px !important;
+    margin-top: 20px !important;
     display: flex;
     justify-content: space-between;
 
+    @media (max-width: 600px) {
+      justify-content: center;
+      flex-direction: column;
+      row-gap: 5px;
+
+      div[data-type="Button"] {
+        width: 100% !important;
+      }
+    }
+
     > div[data-type="Button"]:last-of-type {
       margin-left: auto !important;
+
+      @media (max-width: 600px) {
+        margin: 0 auto !important;
+      }
     }
   }
 
@@ -21,6 +40,10 @@
     div[role="radiogroup"] {
       margin-top: 30px !important;
       row-gap: 5px !important;
+
+      @media (max-width: 600px) {
+        grid-template-columns: 1fr !important;
+      }
     }
   }
 
@@ -30,6 +53,10 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 10px;
     row-gap: 20px;
+
+    @media (max-width: 600px) {
+      grid-template-columns: 1fr !important;
+    }
   }
 
   // step 3
