--- a/src/styles/forms/_appointment.scss
+++ b/src/styles/forms/_appointment.scss
@@ -5,7 +5,7 @@
       font-size: var(--fontSize__base) !important;
     }
     &.ft--shrink {
-      margin-bottom: 7px !important;
+      top: -10px !important;
     }
   }
 
