--- a/src/styles/forms/_verify-secondary-insurance.scss
+++ b/src/styles/forms/_verify-secondary-insurance.scss
@@ -1,5 +1,6 @@
 #verify-secondary-ins-form {
-  #e8 {
+  #e18,
+  #e15 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
@@ -7,6 +8,14 @@
 
     @media (max-width: 700px) {
       grid-template-columns: 1fr;
+    }
+
+    div[data-type="Subhead"] {
+      grid-column: span 2;
+
+      @media (max-width: 700px) {
+        grid-column: span 1;
+      }
     }
   }
 
