--- a/src/styles/forms/_verify-secondary-insurance.scss
+++ b/src/styles/forms/_verify-secondary-insurance.scss
@@ -19,6 +19,13 @@
     }
   }
 
+  // subheads
+  #e19,
+  #e20 {
+    margin: 0 !important;
+    font-size: 21px !important;
+  }
+
   // button
   #e11 {
     display: flex;
