--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -81,4 +81,7 @@
   /* line heights */
   --lineHeight__heading: 1.3;
   --lineHeight__base: 1.75;
+
+  // titan overrides
+  --mui-primary: var(--color__blue) !important;
 }
