--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -277,12 +277,15 @@
   }
 
   // label position adjustments
-  #e40,
   #e74,
   #e84 {
     > label + div {
       margin-top: 36px !important;
     }
+  }
+
+  #e40 > label + div {
+    margin-top: 56px !important;
   }
 
   // address fields
