Add offboarding form styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,3 +21,4 @@
 @import "./forms/identity-verification";
 @import "./forms/verify-primary-insurance";
 @import "./forms/verify-secondary-insurance";
+@import "./forms/offboarding-survey";
