--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,3 +22,4 @@
 @import "./forms/verify-primary-insurance";
 @import "./forms/verify-secondary-insurance";
 @import "./forms/offboarding-survey";
+@import "./forms/patient-referral";
