--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -5,7 +5,7 @@
     row-gap: 20px;
     column-gap: 10px;
 
-    div[data-type="Subhead"] {
+    div[data-type="Subhead"] .ft--theme--Typography--subhead {
       grid-column: span 2;
       margin-top: 0 !important;
     }
@@ -65,7 +65,6 @@
     grid-template-columns: 1fr 1fr;
     row-gap: 20px;
     column-gap: 10px;
-    margin-bottom: 30px !important;
 
     div[data-type="Subhead"] {
       grid-column: span 2;
