--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,3 +23,4 @@
 @import "./forms/verify-secondary-insurance";
 @import "./forms/offboarding-survey";
 @import "./forms/patient-referral";
+@import "./forms/patient-survey";
