--- a/src/styles/forms/_patient-survey.scss
+++ b/src/styles/forms/_patient-survey.scss
@@ -1,5 +1,5 @@
 #patient-survey {
-  div[data-type="Paragraph"].ft--e4--root div div div {
+  div[data-type="Paragraph"].ft--e4--root div div div div {
     position: relative !important;
     padding-left: 50px !important;
     display: flex;
