--- a/src/styles/forms/_patient-survey.scss
+++ b/src/styles/forms/_patient-survey.scss
@@ -35,4 +35,12 @@
     font-weight: 600 !important;
     color: #000 !important;
   }
+
+  span.ft--theme--StarRating--iconSelected {
+    color: #e7bb64 !important;
+  }
+
+  .MuiRating-iconEmpty-59 {
+    color: #b7c5d2 !important;
+  }
 }
