--- a/src/styles/forms/_patient-survey.scss
+++ b/src/styles/forms/_patient-survey.scss
@@ -29,6 +29,10 @@
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     margin-bottom: 20px;
+
+    @media (max-width: 450px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   .ft--e8--label {
