--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,4 +24,4 @@
 @import "./forms/offboarding-survey";
 @import "./forms/patient-referral";
 @import "./forms/patient-survey";
-@import "./new_provider_portal";
+@import "./forms/new_provider_portal";
