--- a/src/styles/forms/_new-provider-portal.scss
+++ b/src/styles/forms/_new-provider-portal.scss
@@ -1,5 +1,8 @@
 #new-provider-portal {
-  #e1593 {
-    background: blue !important;
+  .ft--theme--Page--root [ft--theme--Page--64355ece04f7abebf169ad04] {
+    background: red !important;
   }
+  // #e1593 {
+  //   background: blue !important;
+  // }
 }
