--- a/src/styles/forms/_new-provider-portal.scss
+++ b/src/styles/forms/_new-provider-portal.scss
@@ -1,5 +1,5 @@
 #new-provider-portal {
-  .ft--theme--Page--root [ft--theme--Page--64355ece04f7abebf169ad04] {
+  .ft--theme--Page--64355ece04f7abebf169ad04 {
     background: red !important;
   }
   // #e1593 {
