--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -225,7 +225,8 @@
       }
     }
 
-    div[data-type="Button"] button {
+    div[data-type="Button"].ft--theme--Button--primary button,
+    div[data-type="Button"].ft--theme--Button--secondary button {
       padding: 1px 10px !important;
       margin: 0 !important;
     }
