--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -229,6 +229,7 @@
       margin-bottom: 30px !important;
       width: auto !important;
       height: auto !important;
+      min-width: 0 !important;
 
       &.ft--theme--Button--primary,
       &.ft--theme--Button--secondary {
@@ -242,6 +243,7 @@
           width: auto !important;
           height: auto !important;
           line-height: inherit !important;
+          font-size: 16px !important;
         }
       }
     }
