--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -244,6 +244,10 @@
           height: auto !important;
           line-height: inherit !important;
           font-size: 16px !important;
+
+          &:active {
+            font-size: 16px !important;
+          }
         }
       }
     }
