--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,3 +25,4 @@
 @import "./forms/patient-referral";
 @import "./forms/patient-survey";
 @import "./forms/new-provider-portal";
+@import "./forms/candidate-app";
