--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -4,6 +4,10 @@
     color: var(--color__neutral--700);
   }
 
+  .ft--theme--Typography--subhead {
+    font-size: var(--fontSize__h5) !important;
+  }
+
   // button auto-fit containers
   #e41,
   #e43,
@@ -14,6 +18,7 @@
   #e62 {
     display: flex;
     justify-content: space-between;
+    margin-top: 40px;
 
     @media (max-width: 700px) {
       row-gap: 5px;
