--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -9,6 +9,11 @@
     color: var(--color__neutral--600) !important;
   }
 
+  // text area
+  .ft--theme--FormField--textarea-form-control {
+    min-height: 100px !important;
+  }
+
   // button auto-fit containers
   #e41,
   #e43,
@@ -50,6 +55,10 @@
 
     > div[data-type="Auto Fit Container"]:nth-of-type(1) {
       grid-column: span 2;
+    }
+
+    .ft--theme--Typography--subhead {
+      font-size: 18px !important;
     }
   }
 }
