--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -24,7 +24,7 @@
   #e62 {
     display: flex;
     justify-content: space-between;
-    padding-top: 40px;
+    padding-top: 40px !important;
 
     @media (max-width: 700px) {
       row-gap: 5px;
