--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -48,17 +48,24 @@
   #e70 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 20px;
 
     @media (max-width: 700px) {
-      display: block;
+      grid-template-columns: 1fr;
     }
 
     > div[data-type="Auto Fit Container"]:nth-of-type(1) {
       grid-column: span 2;
+
+      @media (max-width: 700px) {
+        grid-column: span 1;
+      }
     }
 
     .ft--theme--Typography--subhead {
       font-size: 18px !important;
+      margin: 0 0 5px !important;
     }
   }
 }
