--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -2,6 +2,8 @@
   // subheader
   .ft--theme--Typography--subhead {
     font-size: var(--fontSize__h5) !important;
+    font-size: 18px !important;
+    margin: 0 0 5px !important;
   }
 
   // paragraph
@@ -62,10 +64,14 @@
         grid-column: span 1;
       }
     }
+  }
 
-    .ft--theme--Typography--subhead {
-      font-size: 18px !important;
-      margin: 0 0 5px !important;
+  #e17 > div:first-of-type {
+    display: grid;
+    grid-template: 1fr 1fr 1fr;
+
+    @media (max-width: 700px) {
+      grid-template-columns: 1fr;
     }
   }
 }
