--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -79,12 +79,16 @@
 
   #e17 > div:first-of-type {
     display: grid;
-    grid-template: 1fr 1fr 1fr;
+    grid-template: 1fr 1fr 1fr !important;
     row-gap: 5px;
     column-gap: 20px;
 
+    @media (max-width: 992px) {
+      grid-template-columns: 1fr 1fr !important;
+    }
+
     @media (max-width: 700px) {
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr !important;
     }
   }
 }
