--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -3,8 +3,9 @@
   div[data-type="Auto Fit Container"] {
     margin-bottom: 15px;
   }
+
   // progress bar
-  #e85 {
+  div[data-type="Progress"] {
     margin-bottom: 2rem !important;
     border-radius: 2.5px !important;
     overflow: hidden !important;
