--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -53,6 +53,10 @@
       }
     }
 
+    > div [data-type="Button"]:first-of-type {
+      grid-column: span 2 !important;
+    }
+
     > div[data-type="Button"]:last-of-type {
       margin-left: auto !important;
 
