Hide titan progress bar

--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -4,6 +4,11 @@
     margin-bottom: 15px;
   }
 
+  //hide Titan progress bar
+  .ft--e94--panelRoot {
+    display: none;
+  }
+
   // progress bar
   div[data-type="Progress"] {
     margin-bottom: 2rem !important;
