--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -80,6 +80,7 @@
 
     > div[data-type="Auto Fit Container"] > [data-type="Progress"] {
       grid-column: span 2;
+    }
 
     > div[data-type="Auto Fit Container"]:nth-of-type(1) {
       grid-column: span 2;
