--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -73,6 +73,7 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 10px;
     row-gap: 20px;
+    background-color: purple;
 
     @media (max-width: 700px) {
       grid-template-columns: 1fr;
