Add button container

--- a/src/styles/forms/_candidate-app.scss
+++ b/src/styles/forms/_candidate-app.scss
@@ -39,7 +39,8 @@
   #e51,
   #e54,
   #e58,
-  #e62 {
+  #e62,
+  #e147 {
     display: flex;
     justify-content: space-between;
     padding-top: 40px !important;
