--- a/src/styles/_titan-resets.scss
+++ b/src/styles/_titan-resets.scss
@@ -3,9 +3,9 @@ html > body {
   max-width: 100% !important;
 }
 
-#ft__builder__root__el {
-  overflow: hidden !important;
-}
+// #ft__builder__root__el {
+//   overflow: hidden !important;
+// }
 
 // fix weird overflow
 .ft--control--root {
