Hide grid for viewing new fields

--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -1,28 +1,28 @@
 #patient-referral {
-  #e3 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 20px;
-    column-gap: 10px;
+  // #e3 {
+  //   display: grid;
+  //   grid-template-columns: 1fr 1fr;
+  //   row-gap: 20px;
+  //   column-gap: 10px;
 
-    div[data-type="Subhead"] .ft--theme--Typography--subhead {
-      grid-column: span 2;
-      margin-top: 0 !important;
-    }
+  //   div[data-type="Subhead"] .ft--theme--Typography--subhead {
+  //     grid-column: span 2;
+  //     margin-top: 0 !important;
+  //   }
 
-    > div[data-type="Input Fields"]:first-of-type {
-      grid-column: span 2;
-    }
-  }
+  //   > div[data-type="Input Fields"]:first-of-type {
+  //     grid-column: span 2;
+  //   }
+  // }
 
-  // address span
-  div[data-type="Auto Fit Container"].ft--e37--root {
-    grid-column: span 2;
+  // // address span
+  // div[data-type="Auto Fit Container"].ft--e37--root {
+  //   grid-column: span 2;
 
-    @media (max-width: 450px) {
-      grid-column: auto;
-    }
-  }
+  //   @media (max-width: 450px) {
+  //     grid-column: auto;
+  //   }
+  // }
 
   // address
   #e37 {
