--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -1,6 +1,7 @@
 #patient-referral {
 
-  #e3 {
+  // provider information
+  #e70 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 20px;
@@ -26,7 +27,7 @@
   }
 
   address
-  #e37 {
+  #e70 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 5px;
@@ -61,6 +62,46 @@
     }
   }
 
+  // office contact information
+  
+#e37 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 10px;
+
+    div[data-type="Subhead"] .ft--theme--Typography--subhead {
+      grid-column: span 2;
+      margin-top: 0 !important;
+    }
+
+    > div[data-type="Input Fields"]:first-of-type {
+      grid-column: span 2;
+    }
+  }
+
+  // address span
+  div[data-type="Auto Fit Container"].ft--e37--root {
+    grid-column: span 2;
+
+    @media (max-width: 450px) {
+      grid-column: auto;
+    }
+  }
+// IS a minor patient info
+  #e47 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 10px;
+
+    div[data-type="Subhead"] {
+      grid-column: span 2;
+    }
+  }
+
+
+  // NOT a minor patient info
   #e20 {
     display: grid;
     grid-template-columns: 1fr 1fr;
