Update subhead grid

--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -7,7 +7,10 @@
     row-gap: 20px;
     column-gap: 10px;
 
-   
+    div[data-type="Subhead"] .ft--theme--Typography--subhead {
+      grid-column: span 2 !important;
+      margin-top: 0 !important;
+    }
 
     > div[data-type="Input Fields"]:first-of-type {
       grid-column: span 2;
@@ -21,11 +24,6 @@
     @media (max-width: 450px) {
       grid-column: auto;
     }
-  }
-  
-  div[data-type="Subhead"] .ft--theme--Typography--subhead {
-    grid-column: span 2;
-    margin-top: 0 !important;
   }
 
   address
