--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -7,12 +7,12 @@
     row-gap: 20px;
     column-gap: 10px;
 
-    div[data-type="Subhead"] .ft--theme--Typography--subhead {
-      grid-column: span 2 !important;
-      margin-top: 0 !important;
-    }
+    // div[data-type="Subhead"] .ft--theme--Typography--subhead {
+    //   grid-column: span 2 !important;
+    //   margin-top: 0 !important;
+    // }
 
-    > div[data-type="Input Fields"]:first-of-type {
+    > div:first-of-type {
       grid-column: span 2;
     }
   }
