Update responsive grid

--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -16,7 +16,7 @@
     //   grid-column: span 2;
     // }
 
-    @media (max-width: 768px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
   }
@@ -50,24 +50,24 @@
       row-gap: 20px;
       column-gap: 10px;
 
-      div[data-type="Subhead"] .ft--theme--Typography--subhead {
-        grid-column: span 2;
-        margin-top: 0 !important;
-      }
+      // div[data-type="Subhead"] .ft--theme--Typography--subhead {
+      //   grid-column: span 2;
+      //   margin-top: 0 !important;
+      // }
 
-      > div[data-type="Input Fields"]:first-of-type {
-        grid-column: span 2;
-      }
+      // > div[data-type="Input Fields"]:first-of-type {
+      //   grid-column: span 2;
+      // }
     }
 
   // address span
-  div[data-type="Auto Fit Container"].ft--e37--root {
-    grid-column: span 2;
+  // div[data-type="Auto Fit Container"].ft--e37--root {
+  //   grid-column: span 2;
 
-    @media (max-width: 450px) {
-      grid-column: auto;
-    }
-  }
+  //   @media (max-width: 450px) {
+  //     grid-column: auto;
+  //   }
+  // }
 
   // IS a minor patient info
   #e47 {
@@ -76,7 +76,7 @@
     row-gap: 20px;
     column-gap: 10px;
 
-    @media (max-width: 768px) {
+    @media (max-width: 450px) {
       grid-template-columns: 1fr;
     }
 
