--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -17,7 +17,8 @@
     // }
 
     @media (max-width: 450px) {
-      grid-template-columns: 1fr;
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -50,6 +51,11 @@
       row-gap: 20px;
       column-gap: 10px;
 
+      @media (max-width: 450px) {
+        display: flex;
+        flex-direction: column;
+      }
+
       // div[data-type="Subhead"] .ft--theme--Typography--subhead {
       //   grid-column: span 2;
       //   margin-top: 0 !important;
@@ -77,7 +83,8 @@
     column-gap: 10px;
 
     @media (max-width: 450px) {
-      grid-template-columns: 1fr;
+      display: flex;
+      flex-direction: column;
     }
 
     // div[data-type="Subhead"] {
@@ -94,7 +101,8 @@
     column-gap: 10px;
 
     @media (max-width: 768px) {
-      grid-template-columns: 1fr;
+      display: flex;
+      flex-direction: column;
     }
 
     // div[data-type="Subhead"] {
